samples/_failures_safe/1761351893_f946d0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d14dceac.c: In function ‘main’:
./samples/SAFE/__tmp_d14dceac.c:157:5: error: expected declaration or statement at end of input
  157 |     if (product.data != NULL) {
      |     ^~
./samples/SAFE/__tmp_d14dceac.c:157:5: error: expected declaration or statement at end of input
